# allocator

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
include/: active_mutex.hpp  allocator.hpp  block_adaptor.hpp  block_allocator_adaptor.hpp  dummy_mutex.hpp  mallocator.hpp  mmf_allocator.hpp  pretty_name.hpp  round_robin_adaptor.hpp  universal_allocator.hpp  universal_block_adaptor.hpp
modules/: allocator.cppm  pretty_name.cppm
src/: main.cpp  pretty_name.hpp
